# modal-docs-copilot-extension

./: .env.test  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: _modal.py  main.py  router.py  settings.py
app/copilot/: router.py  schemas.py  service.py
app/oauth/: router.py  schemas.py
tests/health/: test_health_router.py
